Fixed spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -36,9 +36,6 @@
   -1px 1px 0 #000,
   1px 1px 0 #000;
 }
-.desc {
-  font-size: 10px;
-}
 .flip-box {
   background-color: transparent;
   font-size: 20px;
@@ -66,4 +63,13 @@
   background-color: #555;
   color: white;
   transform: rotateY(180deg);
+}
+.aspectwrapper {
+  display: inline-block; 
+  width: 100%;         
+  position: relative; 
+}
+.aspectwrapper::after {
+  display: block;
+  content: '';
 }
